--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: bahiapirata-backend
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5433:/bahiapirata_db
+    url: jdbc:postgresql://localhost:5433/bahiapirata_db
     username: postgres
     password: 12345678
 
