--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,9 @@ spring:
     username: postgres
     password: 12345678
 
+piratebay:
+  security:
+    salt: qwertyuiop
+    secretJwt: 1234567890
+
+# 123456qwertyuiop
